--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -16,6 +16,21 @@
     <%= form.text_field :title %>
   </div>
 
+  <div class="field">
+    <%= form.label :author %>
+    <%= form.text_field :author %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price, step: :any %>
+  </div>
+
+  <div class="field">
+    <%= form.label :published_date, "Published Date" %>
+    <%= form.date_select :published_date, {order: [:month, :day, :year], use_two_digit_numbers: true,start_year: 1500} %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
